--- a/style.css
+++ b/style.css
@@ -4,22 +4,22 @@ body {
   font-size: 13px;
 }
 
-h1 {
+.declaration {
   font-size: 17px;
   font-weight: bold;
   margin: 0;
 }
 
-h2 {
+.head2 {
   font-size: 15px;
   font-weight: normal;
   margin: 1em 0;
 }
 
-p {
+.parag {
   margin: 0;
 }
 
-a {
+.link {
   color: green;
 }
